packages/include-doc/tests/error/syntax_error.stderr
error: expected one of `!` or `::`, found `invalid`
 --> tests/error/syntax_error.rs:1:6
  |
1 | Some invalid Rust syntax
  |      ^^^^^^^ expected one of `!` or `::`
